# heat_eq

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md  To do.md  index.html
src/: analysis.rs  configuration.rs  kernel.rs  main.rs
src/analysis/: cummulative.rs  current.rs
src/configuration/: settings.rs
src/configuration/settings/: border_conditions.rs  fn_input.rs  storage.rs
src/configuration/settings/fn_input/: kind.rs
