[package]
name = "heat_eq"
version = "0.1.1"
edition = "2018"
description = "Heat equation solver, online!"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "solver"]
categories = ["gui", "wasm", "web-programming", "mathematics", "science"]

[dependencies]
yew = "0.18.0"
wasm-bindgen = "0.2.74"
log = "0.4.14"
wasm-logger = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
splines = { version = "4.0.3", features = ["serialization"] }
quadrature = "0.1.2"
web-sys = { version = "0.3.51", features = ["CanvasRenderingContext2d", "HtmlCanvasElement"] }
ron = "0.6.4"
exmex = "0.7.1"
thiserror = "1.0.26"
anyhow = "1.0.42"
itertools-num = "0.1.3"
plotters-canvas = "0.3.0"
plotters = "0.3.1"
itertools = "0.10.1"
colorous = "1.0.5"
nalgebra = "0.28.0"
strum = { version = "0.21", features = ["derive"] }
